unpackaged/main/default/objects/pse__Team_Schedule_Template_Slot__c/fields/pse__Resources_Required__c.field-meta.xml
<CustomField>
    <fullName>pse__Resources_Required__c</fullName>
    <description>The number of resources required for the schedule slot.</description>
    <inlineHelpText>The number of resources required for the schedule slot.</inlineHelpText>
    <label>Resources Required</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>