unpackaged/main/default/objects/pse__Team_Schedule_Template_Slot__c/fields/pse__Team_Schedule_Template__c.field-meta.xml
<CustomField>
    <fullName>pse__Team_Schedule_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The team schedule template associated with this schedule slot.</description>
    <inlineHelpText>The team schedule template associated with this schedule slot.</inlineHelpText>
    <label>Team Schedule Template</label>
    <referenceTo>pse__Team_Schedule_Template__c</referenceTo>
    <relationshipLabel>Team Schedule Template Slots</relationshipLabel>
    <relationshipName>Team_Schedule_Template_Slots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>