unpackaged/main/default/objects/pse__Team_Schedule_Template_Slot__c/validationRules/pse__Hours_Must_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Hours_Must_Positive</fullName>
    <active>true</active>
    <description>Validation message indicating time slot hours must be non-negative increments of 0.25.</description>
    <errorConditionFormula>OR(pse__Hours__c &lt; 0 , MOD(pse__Hours__c ,0.25)  &lt;&gt; 0)</errorConditionFormula>
    <errorDisplayField>pse__Hours__c</errorDisplayField>
    <errorMessage>Hours should be non-negative values in increments of 0.25.</errorMessage>
</ValidationRule>