unpackaged/main/default/objects/pse__Team_Schedule_Template_Slot__c/validationRules/pse__Resource_Should_Be_In_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Resource_Should_Be_In_Range</fullName>
    <active>true</active>
    <description>Validation message indicating number of required resources on a time slot can be from 1 to 99.</description>
    <errorConditionFormula>OR(pse__Resources_Required__c &lt; 1,pse__Resources_Required__c &gt; 99)</errorConditionFormula>
    <errorDisplayField>pse__Resources_Required__c</errorDisplayField>
    <errorMessage>Number of Resources should be between 1 to 99.</errorMessage>
</ValidationRule>